--- a/home.html
+++ b/home.html
@@ -1,77 +1,142 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>
-       OLd Chang Kee
-    </title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <title>OLd Chang Kee</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-      
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column"> 
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand">Old Chang Kee</h3>
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="index.html">Home</a>
-        <a class="nav-link" href="products.html">Our Proucts</a>
-        <a class="nav-link" href="contact-us.html">Contact-us</a>
-      </nav>
+  <body>
+    <header>
+    <div class="logo-box">
+      <div class="chang-kee-logo">
+        <img src="/img/logo-old-chang-kee.gif" alt="old chang kee logo" />
+      </div>
+
+      <div class="halal-logo">
+        <img src="/img/halal-removebg-preview.png" alt="halal logo" />
+      </div>
     </div>
   </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Menu</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+          </li>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Take a trip back to 1956</h1>
-    <p class="lead">For over half a century, Singaporeans from all walks of life have enjoyed Old Chang Kee's delectable hot snacks and lip-smacking quick bites. We embrace the wonderful traditions and noble heritage of our proud nation, and will always strive to be your Old Chang Kee, bringing you the good old tastes that we have all come to love since 1956.</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">View Our Products</a>
-    </p>
-  </main>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About Us
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Our Heritage</a>
+              <a class="dropdown-item" href="#">Awards and Certifications</a>
+              <a class="dropdown-item" href="#">Our Spices</a>
+              <a class="dropdown-item" href="#">The Better Puff</a>
+            </div>
+          </li>
 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Our Products
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Traditional Favourites</a>
+              <a class="dropdown-item" href="#">Seafood Favourites</a>
+              <a class="dropdown-item" href="#">Chicken Favourites</a>
+              <a class="dropdown-item" href="#">Desserts</a>
+              <a class="dropdown-item" href="#">Our Brands</a>
+              <a class="dropdown-item" href="#">Breakfast Set</a>
+              <a class="dropdown-item" href="#">Catering</a>
+            </div>
+          </li>
 
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/slider2.jpg" class="d-block w-100" alt="...">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Outlets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Franchise</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Current News and Promotion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Investors Relations</a>
+          </li>
+        </ul>
       </div>
-      <div class="carousel-item">
-        <img src="img/slider3.jpg" class="d-block w-100" alt="...">
+    </nav>
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="/img/slider2.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/slider3.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/slider4.jpg" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/img/Slider6.jpg" alt="Third slide">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="img/Slider6.jpg" class="d-block w-100" alt="...">
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-   <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </button>
-  </div>
 
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>Copyright of Old Chang Kee Ltd Group 2012 | Digital Branding by Brand Alliance.</p>
-    </div>
-  </footer>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-        crossorigin="anonymous"></script>
-</body>
+    
 
+    <footer>
+      <div class="main-page-footer">
+        <div class="logo-certificate" >
+          <h3>Old Chang Kee</h3>
+          <!-- <div>
+            <img src="/img/award-1-logo.jpg" alt="award-image">
+          </div> -->
+        </div>
+        <div class="content-details"></div>
+        <div class="contact-details"></div>
+
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous">
+    </script>
+
+  </body>
 </html>
+
+
