--- a/contact-us.html
+++ b/contact-us.html
@@ -1,144 +1,358 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<title>Contact V17</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
 
-<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-<style>
-	@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-	</style>
-	
-<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-
-<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-
-<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-
-<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-
-<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-
-<link rel="stylesheet" type="text/css" href="css/util.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-
-<meta name="robots" content="noindex, follow">
+  <title>OLd Chang Kee</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-<div class="container-contact100">
-<div class="wrap-contact100">
-<form class="contact100-form validate-form">
-<span class="contact100-form-title">
-Send Us A Message
-</span>
-<label class="label-input100" for="first-name">Tell us your name *</label>
-<div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
-<input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
-<span class="focus-input100"></span>
-</div>
-<div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
-<input class="input100" type="text" name="last-name" placeholder="Last name">
-<span class="focus-input100"></span>
-</div>
-<label class="label-input100" for="email">Enter your email *</label>
-<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
-<span class="focus-input100"></span>
-</div>
-<label class="label-input100" for="phone">Enter phone number</label>
-<div class="wrap-input100">
-<input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
-<span class="focus-input100"></span>
-</div>
-<label class="label-input100" for="message">Message *</label>
-<div class="wrap-input100 validate-input" data-validate="Message is required">
-<textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
-<span class="focus-input100"></span>
-</div>
-<div class="container-contact100-form-btn">
-<button class="contact100-form-btn">
-Send Message
-</button>
-</div>
-</form>
-<div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
-<div class="flex-w size1 p-b-47">
-<div class="txt1 p-r-25">
-<span class="lnr lnr-map-marker"></span>
-</div>
-<div class="flex-col size2">
-<span class="txt1 p-b-20">
-Address
-</span>
-<span class="txt2">
-Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US
-</span>
-</div>
-</div>
-<div class="dis-flex size1 p-b-47">
-<div class="txt1 p-r-25">
-<span class="lnr lnr-phone-handset"></span>
-</div>
-<div class="flex-col size2">
-<span class="txt1 p-b-20">
-Lets Talk
-</span>
-<span class="txt3">
-+1 800 1236879
-</span>
-</div>
-</div>
-<div class="dis-flex size1 p-b-47">
-<div class="txt1 p-r-25">
-<span class="lnr lnr-envelope"></span>
-</div>
-<div class="flex-col size2">
-<span class="txt1 p-b-20">
-General Support
-</span>
-<span class="txt3">
-<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="fd9e9293899c9e89bd98859c908d9198d39e9290">[email&#160;protected]</a>
-</span>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="dropDownSelect1"></div>
+  
+	<div class="logo-box">
+		<div class="chang-kee-logo">
+			<img src="/img/logo-old-chang-kee.gif" alt="old chang kee logo" />
+		</div>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+		<div class="halal-logo">
+			<img src="/img/halal-removebg-preview.png" alt="halal logo" />
+		</div>
+	</div>
 
-<script src="vendor/animsition/js/animsition.min.js"></script>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">Menu</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+				</li>
 
-<script src="vendor/bootstrap/js/popper.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">
+						About Us
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="/aboutUs.html">Our Heritage</a>
+						<a class="dropdown-item" href="/aboutUs.html">Awards and Certifications</a>
+						<a class="dropdown-item" href="/spices.html">Our Spices</a>
+						<a class="dropdown-item" href="/betterPuff.html">The Better Puff</a>
+					</div>
+				</li>
 
-<script src="vendor/select2/select2.min.js"></script>
-<script>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">
+						Our Products
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">Traditional Favourites</a>
+						<a class="dropdown-item" href="#">Seafood Favourites</a>
+						<a class="dropdown-item" href="#">Chicken Favourites</a>
+						<a class="dropdown-item" href="#">Desserts</a>
+						<a class="dropdown-item" href="#">Our Brands</a>
+						<a class="dropdown-item" href="#">Breakfast Set</a>
+						<a class="dropdown-item" href="#">Catering</a>
+					</div>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link" href="#">Outlets</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Franchise</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact-us.html">Contact Us</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Current News and Promotion</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Investors Relations</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+
+	<div class="container-contact100">
+		<div class="wrap-contact100">
+			<form class="contact100-form validate-form">
+				<span class="contact100-form-title">
+					Send Us A Message
+				</span>
+				<label class="label-input100" for="first-name">Tell us your name *</label>
+				<div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
+					<input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
+					<span class="focus-input100"></span>
+				</div>
+				<div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
+					<input class="input100" type="text" name="last-name" placeholder="Last name">
+					<span class="focus-input100"></span>
+				</div>
+				<label class="label-input100" for="email">Enter your email *</label>
+				<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+					<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
+					<span class="focus-input100"></span>
+				</div>
+				<label class="label-input100" for="phone">Enter phone number</label>
+				<div class="wrap-input100">
+					<input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
+					<span class="focus-input100"></span>
+				</div>
+				<label class="label-input100" for="message">Message *</label>
+				<div class="wrap-input100 validate-input" data-validate="Message is required">
+					<textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
+					<span class="focus-input100"></span>
+				</div>
+				<div class="container-contact100-form-btn">
+					<button class="contact100-form-btn">
+						Send Message
+					</button>
+				</div>
+			</form>
+			<div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
+				<div class="flex-w size1 p-b-47">
+					<div class="txt1 p-r-25">
+						<span class="lnr lnr-map-marker"></span>
+					</div>
+					<div class="flex-col size2">
+						<span class="txt1 p-b-20">
+							Address
+						</span>
+						<span class="txt2">
+							Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US
+						</span>
+					</div>
+				</div>
+				<div class="dis-flex size1 p-b-47">
+					<div class="txt1 p-r-25">
+						<span class="lnr lnr-phone-handset"></span>
+					</div>
+					<div class="flex-col size2">
+						<span class="txt1 p-b-20">
+							Lets Talk
+						</span>
+						<span class="txt3">
+							+1 800 1236879
+						</span>
+					</div>
+				</div>
+				<div class="dis-flex size1 p-b-47">
+					<div class="txt1 p-r-25">
+						<span class="lnr lnr-envelope"></span>
+					</div>
+					<div class="flex-col size2">
+						<span class="txt1 p-b-20">
+							General Support
+						</span>
+						<span class="txt3">
+							<a href="/cdn-cgi/l/email-protection" class="__cf_email__"
+								data-cfemail="fd9e9293899c9e89bd98859c908d9198d39e9290">[email&#160;protected]</a>
+						</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="dropDownSelect1"></div>
+
+	<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+
+	<script src="vendor/animsition/js/animsition.min.js"></script>
+
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+	<script src="vendor/select2/select2.min.js"></script>
+	<script>
 		$(".selection-2").select2({
 			minimumResultsForSearch: 20,
 			dropdownParent: $('#dropDownSelect1')
 		});
 	</script>
 
-<script src="vendor/daterangepicker/moment.min.js"></script>
-<script src="vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="vendor/daterangepicker/moment.min.js"></script>
+	<script src="vendor/daterangepicker/daterangepicker.js"></script>
 
-<script src="vendor/countdowntime/countdowntime.js"></script>
+	<script src="vendor/countdowntime/countdowntime.js"></script>
 
-<script src="js/main.js"></script>
+	<script src="js/main.js"></script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-	  gtag('config', 'UA-23581568-13');
+		gtag('config', 'UA-23581568-13');
 	</script>
+ 
+
+  <!-- Footer -->
+  <footer class="text-center text-lg-start bg-dark text-muted">
+    <!-- Section: Social media -->
+    <!-- <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    
+  </section> -->
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="text-white" style="padding-top: 5px;">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3"></i>Old Chang Kee
+            </h6>
+            <p>
+              Singaporeans from all walks of life have enjoyed
+              Old Chang Kee's delectable hot snacks and lip-smacking quick bites.
+            </p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127640.10855975811!2d103.82586579098646!3d1.323825745902785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da17b3f9b9dfb9%3A0x6a2b276c5b8bd3c6!2sOld%20Chang%20Kee!5e0!3m2!1sen!2ssg!4v1720678621560!5m2!1sen!2ssg"
+              width="300" height="230" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Products
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">Traditional Favourites</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Seafood Favourites</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Chicken Favourites</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Desserts</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Our Brands</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Breakfast</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Catering</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful links
+            </h6>
+            <p>
+              <a href="/aboutUs.html" class="text-reset">about Us</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Outlets</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Franchise</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Current News and Promotion</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Investor Relations</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Awards and Certifications</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+            <p><i class="fas fa-home me-3"></i> Old Chang Kee Singapore Pte. Ltd.
+              2 Woodlands Terrace S738427 Republic of Singapore.
+            </p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              contact@oldchangkee.com
+            </p>
+            <p><i class="fas fa-phone me-3"></i> Tel (65) 6303 2400</p>
+            <p><i class="fas fa-print me-3"></i>Fax (65) 6303 2415
+            </p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05); color: white;">
+      We have updated our <a class="text-reset fw-bold" href="#"> Privacy Policy
+      </a>and <a class="text-reset fw-bold" href="#">Terms of Use</a>.
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    </script>
+
 </body>
+
 </html>
