--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Menu</a>
+    <!-- <a class="navbar-brand" href="#">Home</a> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,49 +36,30 @@
           <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
         </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            About Us
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/aboutUs.html">Our Heritage</a>
-            <a class="dropdown-item" href="/aboutUs.html">Awards and Certifications</a>
-            <a class="dropdown-item" href="/spices.html">Our Spices</a>
-            <a class="dropdown-item" href="/betterPuff.html">The Better Puff</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Our Product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="betterPuff.html">The Better Puff</a>
         </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Our Products
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Traditional Favourites</a>
-            <a class="dropdown-item" href="#">Seafood Favourites</a>
-            <a class="dropdown-item" href="#">Chicken Favourites</a>
-            <a class="dropdown-item" href="#">Desserts</a>
-            <a class="dropdown-item" href="#">Our Brands</a>
-            <a class="dropdown-item" href="#">Breakfast Set</a>
-            <a class="dropdown-item" href="#">Catering</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="spices.html">Our Spices</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="aboutUs.html">Our Heritage</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="aboutUs.html">Awards</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Outlets</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Franchise</a>
-        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="contact-us.html">Contact Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Current News and Promotion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Investors Relations</a>
         </li>
       </ul>
     </div>
