--- a/aboutUs.html
+++ b/aboutUs.html
@@ -38,7 +38,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
         </li>
 
@@ -54,7 +54,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="aboutUs.html">Our Heritage</a>
+          <a class="nav-link active" href="aboutUs.html">Our Heritage</a>
         </li>
 
         <li class="nav-item">
