--- a/contact-us.html
+++ b/contact-us.html
@@ -37,7 +37,7 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		  <ul class="navbar-nav">
-			<li class="nav-item active">
+			<li class="nav-item ">
 			  <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
 			</li>
 	
@@ -64,7 +64,7 @@
 			</li>
 	
 			<li class="nav-item">
-			  <a class="nav-link" href="contact-us.html">Contact Us</a>
+			  <a class="nav-link active" href="contact-us.html">Contact Us</a>
 			</li>
 		  </ul>
 		</div>
