--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Our Product</a>
+          <a class="nav-link" href="our-product.html">Our Product</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="betterPuff.html">The Better Puff</a>
