add product link to card

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <p class="card-text card-content">Beyond our signature curry puff, we have also developed several distinctive sub-brands
                        to expand our portfolio and offer our loyal customers with more high quality and delicious products. Each brand name 
                        embodies a unique promise, aspiration and personality.</p>
-                    <a href="#" class="btn btn-primary">more</a>
+                    <a href="our-product.html" class="btn btn-primary">more</a>
                 </div>
             </div>
         </div>
